# battleship-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Requirements.md  battleship-gui.cpp  battleship-gui.h  battleship-nogui.cpp  battleship-nogui.h  code_style.xml  game_state_diag.xmi  main.cpp  texture_atlas.aseprite  todo.md  uml-diagram.xmi
.run/: BATTLESHIP.run.xml
battleship/: BSBot.cpp  BSBot.h  BSLocal.cpp  BSLocal.h  BSOpponent.cpp  BSOpponent.h  BSPlayer.cpp  BSPlayer.h  BSPlayerGui.cpp  BSPlayerGui.h  Battleship.cpp  Battleship.h  GameSession.h  MainMenuScreen.cpp  MainMenuScreen.h  NoGuiRunner.cpp  NoGuiRunner.h  PlaceShipsScreen.cpp  PlaceShipsScreen.h
battleship/screen/: MainMenuScreen.cpp  MainMenuScreen.h  PlaceShipsScreen.cpp  PlaceShipsScreen.h  PlayScreen.cpp  PlayScreen.h  WinLossScreen.h
battleship/screen/elements/: BoardElement.cpp  BoardElement.h
design-and-writeup/: Requirements.md  game_state_diag.xmi  requirements.md  styleguide.md
src/: BasePacket.cpp  BasePacket.h  ClientSocketStream.cpp  ClientSocketStream.h  HostSocketStream.cpp  HostSocketStream.h  SocketStream.cpp  SocketStream.h  main.cpp
src/battleship/: BSBot.cpp  BSBot.h  BSLocal.cpp  BSLocal.h  BSOpponent.h  BSPlayer.cpp  BSPlayer.h  BSPlayerGui.cpp  BSPlayerGui.h  Battleship.h  GameSession.cpp  GameSession.h  GameStateMachine.cpp  GameStateMachine.h  NoGuiRunner.cpp  NoGuiRunner.h
src/battleship/player/: BSBot.cpp  BSBot.h  BSLocal.cpp  BSLocal.h  BSOpponent.h  BSPlayer.cpp  BSPlayer.h
src/battleship/player2/: BSOpponent2.h  BoardTracker.cpp  BoardTracker.h  BoardTrackerRenderer.cpp  BsPlayer2.h
src/battleship/screen/: MainMenuScreen.cpp  MainMenuScreen.h  PlaceShipsScreen.cpp  PlaceShipsScreen.h  PlayScreen.cpp  PlayScreen.h  WinLossScreen.h
src/battleship/screen/elements/: BoardElement.cpp  BoardElement.h
src/battleship/screen2/: MainMenuScreen2.cpp  MainMenuScreen2.h  PlaceShipScreen2.cpp  PlaceShipScreen2.h  PlayScreen2.cpp  PlayScreen2.h  SyncOpponentScreen.cpp  SyncOpponentScreen.h  WinLossScreen.h
src/battleship/screen2/elements/: BoardElement2.cpp  BoardElement2.h
src/client/: main.cpp
src/client/battleship/: Battleship.cpp  Battleship.h  GameStateMachine.cpp  GameStateMachine.h
src/client/battleship/player/: BSOpponent.cpp  BSOpponent.h  BoardTracker.cpp  BoardTracker.h  BoardTrackerRenderer.cpp  BoardTrackerRenderer.h  BsBotOpponent.cpp  BsBotOpponent.h  BsPlayer.cpp  BsPlayer.h  RemoteOpponent.cpp  RemoteOpponent.h
src/client/battleship/player2/: BSOpponent2.cpp  BSOpponent2.h  BsBotOpponent.cpp  BsBotOpponent.h  BsPlayer2.cpp  BsPlayer2.h  RemoteOpponent.cpp  RemoteOpponent.h
src/client/battleship/screen/: ConnectingScreen.cpp  ConnectingScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MultiplayerScreen.cpp  MultiplayerScreen.h  PlaceShipScreen.cpp  PlaceShipScreen.h  PlayScreen.cpp  PlayScreen.h  SyncOpponentScreen.cpp  SyncOpponentScreen.h  WinLossScreen.h
src/client/battleship/screen/elements/: BoardElement.cpp  BoardElement.h
src/client/battleship/screen2/: ConnectingScreen.cpp  ConnectingScreen.h  MainMenuScreen2.cpp  MainMenuScreen2.h  MultiplayerScreen.cpp  PlaceShipScreen2.cpp  PlaceShipScreen2.h  PlayScreen2.cpp  PlayScreen2.h  SyncOpponentScreen.cpp  SyncOpponentScreen.h  WinLossScreen.h
src/client/battleship/screen2/elements/: BoardElement2.cpp  BoardElement2.h
src/client/wagyourgui/: DrawableHelper.cpp  DrawableHelper.h  Font.cpp  Font.h  GLFWSession.cpp  GLFWSession.h  Screen.cpp  Screen.h  Window.cpp
src/client/wagyourgui/elements/: Button.cpp  Button.h  DisableableElement.h  TextInput.cpp  TextInput.h
src/server/: Session.cpp  Session.h  main.cpp
src/shared/: SocketConnection.cpp  SocketConnection.h
src/wagyourgui/: Font.cpp  Font.h  GLBuilder.cpp  GLBuilder.h  Screen.cpp  Screen.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/wagyourgui/elements/: BaseElement.h  Button.cpp  Button.h
wagyourgui/: BaseElement.h  DrawableHelper.cpp  DrawableHelper.h  Font.cpp  Font.h  GLBuilder.cpp  GLBuilder.h  GLFWSession.cpp  GLFWSession.h  Screen.cpp  Screen.h  Texture.cpp  Texture.h  Window.cpp  Window.h  wagyourgui.cpp  wagyourgui.h
wagyourgui/elements/: BaseElement.cpp  BaseElement.h  Button.cpp  Button.h  DisableableElement.cpp
